more spacing fixes

--- a/css/site.css
+++ b/css/site.css
@@ -22,7 +22,8 @@ body {
 }
 body main p:not(.heading),
 body main p:not(.secondary-heading),
-body main p:not(.category) {
+body main p:not(.category),
+body main p:not(.date) {
     margin: 20px 0 0;
 }
 body main ul {
